remove foundation-service and test-framework dependencies