@@ -202,7 +202,7 @@ public class JsonArray {
 			return ((Number) o).doubleValue();
 		}
 		if (o instanceof String) {
-			return new Double((String) o).doubleValue();
+			return Double.valueOf((String) o).doubleValue();
 		}
 		throw new NumberFormatException("JSONObject[" +	index + "] is not a number.");
 	}
@@ -389,7 +389,7 @@ public class JsonArray {
 				return ((Number) o).doubleValue();
 			}
 			try {
-				return new Double((String) o).doubleValue();
+				return Double.valueOf((String) o).doubleValue();
 			}	catch (Exception e) {
 				return defaultValue;
 			}
@@ -501,7 +501,7 @@ public class JsonArray {
 		* @return this.
 		*/
 	public JsonArray put(double value) {
-		put(new Double(value));
+		put(Double.valueOf(value));
 		return this;
 	}
 
@@ -512,7 +512,7 @@ public class JsonArray {
 		* @return this.
 		*/
 	public JsonArray put(int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -555,7 +555,7 @@ public class JsonArray {
 		* @throws NoSuchElementException The index must not be negative.
 		*/
 	public JsonArray put(int index, double value) {
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -570,7 +570,7 @@ public class JsonArray {
 		* @throws NoSuchElementException The index must not be negative.
 		*/
 	public JsonArray put(int index, int value) {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
